care/force-app/main/default/objects/Associated_Provider__c/Associated_Provider__c.object-meta.xml
<CustomObject>
    <description>Used to relate a Provider with a Senior Care Company</description>
    <label>Associated Provider</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Associated Provider ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>