care/force-app/main/default/objects/Associated_Provider__c/fields/Associated_Company__c.field-meta.xml
<CustomField>
    <fullName>Associated_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Company</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Associated Providers (Associated Company)</relationshipLabel>
    <relationshipName>Associated_Provider_Companys</relationshipName>
    <type>Lookup</type>
</CustomField>