care/force-app/main/default/objects/Associated_Provider__c/fields/Associated_Company_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Company_Record_Type__c</fullName>
    <formula>Associated_Company__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Company Record Type</label>
    <type>Text</type>
</CustomField>