care/force-app/main/default/objects/Associated_Provider__c/fields/Associator_ID__c.field-meta.xml
<CustomField>
    <fullName>Associator_ID__c</fullName>
    <description>ID of the Senior Care Company to which others should be related</description>
    <label>Associator ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>