care/force-app/main/default/objects/Associated_Provider__c/fields/Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status__c</fullName>
    <formula>TEXT(Senior_Care_Company__r.Provider_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Status</label>
    <type>Text</type>
</CustomField>