care/force-app/main/default/objects/Associated_Provider__c/fields/Senior_Care_Company__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Senior Care Company Name</description>
    <inlineHelpText>Select the Senior Care Company that the Provider is associated with.</inlineHelpText>
    <label>Senior Care Company</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Associated Providers</relationshipLabel>
    <relationshipName>Associated_Providers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>