care/force-app/main/default/objects/Associated_Provider__c/fields/Senior_Care_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Company_Name__c</fullName>
    <formula>Senior_Care_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Care Company Name</label>
    <type>Text</type>
</CustomField>